<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/flashcard_question"
        android:layout_width="360dp"
        android:layout_height="171dp"
        android:layout_above="@+id/answer2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="118dp"
        android:background="@drawable/question_custom"
        android:elevation="20dp"
        android:src="@drawable/question_custom"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/txtQuestion"
        android:textSize="40sp"
        android:typeface="sans"
        android:visibility="visible" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/flashcard_question"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="317dp"
        android:background="@drawable/answers_background"
        android:singleLine="true"
        android:text="@string/answer1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/answer1"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="245dp"
        android:background="@drawable/answers_background"
        android:singleLine="true"
        android:text="@string/answer2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/answer1"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="179dp"
        android:background="@drawable/answers_background"
        android:singleLine="true"
        android:text="@string/answer3"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/visible"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:visibility="visible"
        android:contentDescription="@string/visible"
        android:src="@drawable/visible_eye"/>

    <ImageView
        android:id="@+id/invisible"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:visibility="invisible"
        android:contentDescription="@string/invisible"
        android:src="@drawable/eye_invisible"/>
</RelativeLayout>